<resources>
    <string name="app_name">AFWall+ </string>
    <string name="app_name_donate">AFWall+ (Donate)</string>
    <string name="title_disabled">AFWall+ (Disabled)</string>
    <string name="whitelist_array_item">White list (allow selected)</string>
    <string name="blacklist_array_item">Black list (block selected)</string>
    <string name="showrules">Firewall Rules</string>
    <string name="applyrules">Apply</string>
    <string name="saverules">Save</string>
    <string name="setpwd">Set password</string>
    <string name="help">Help</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="error_purge">Error purging iptables</string>
    <string name="error_binary">Error installing binary files</string>
    <string name="error_migration">Error migrating old settings</string>
    <string name="error_refresh">Error refreshing iptables</string>
    <string name="error_apply">Error applying iptables rules</string>
    <string name="error_fetch">Error fetching iptables rules</string>
    <string name="error_su">Could not acquire root access.\nYou need a rooted phone to run AFWall+.\n\nIf this phone is already rooted, please make sure AFWall+ has enough permissions to execute the \"su\" command.\n</string>
    <string name="error_common">Error : </string>
    <string name="all_item">(Any application) - Same as selecting all applications</string>
    <string name="kernel_item">(Kernel) - Linux kernel</string>
    <string name="tethering_item">(Tethering) - DHCP+DNS services</string>
    <string name="dnsproxy_item">(DNS proxy) - DNS lookups via netd</string>
    <string name="ntp_item">(NTP) - Internet time servers</string>
    <string name="root_item">(root) - Applications running as root</string>
    <string name="fw_enabled">Enable Firewall</string>
    <string name="fw_disabled">Disable Firewall</string>
    <string name="flushed">Rules flushed</string>
    <string name="show_log">Firewall Logs</string>
    <string name="clear_log">Clear log</string>
    <string name="applying_rules">Applying iptables rules.</string>
    <string name="saving_rules">Saving iptables rules.</string>
    <string name="rules_applied">Rules applied with success</string>
    <string name="rules_saved">Rules saved with success</string>
    <string name="rules_deleted">Rules deleted with success</string>
    <string name="pass_titleset">Set password lock</string>
    <string name="pass_titleget">Password required</string>
    <string name="enterpass">Enter the password:</string>
    <string name="error_write_pref">Error writing to preferences</string>
    <string name="enternewpass">Enter the new password (leave blank to remove):</string>
    <string name="passdefined">Password lock defined</string>
    <string name="passremoved">Password lock removed</string>
    <string name="passerror">Error changing password lock</string>
    <string name="working">Working</string>
    <string name="reading_apps">Retrieving installed applications</string>
    <string name="mode">Mode: </string>
    <string name="mode_header">Mode: %s</string>
    <string name="mode_whitelist">White list (allow selected)</string>
    <string name="mode_blacklist">Black list (block selected)</string>
    <string name="set_custom_script">Set custom script</string>
    <string name="preferences">Preferences</string>
    <string name="reload">Reload Applications</string>
    <string name="flush">Flush Rules</string>
    <string name="send_report">Send error report</string>
    <string name="enter_problem">ENTER PROBLEM DESCRIPTION HERE:</string>
    <string name="send_mail">Send mail</string>
    <string name="notify_pref_summary_on">A notification will be sent when a new application is installed</string>
    <string name="notify_pref_summary_off">No notifications will be sent when a new application is installed</string>
    <string name="custom_script_defined">Custom script defined</string>
    <string name="custom_script_removed">Custom script removed</string>
    <string name="custom_script_error">Error saving custom script</string>
    <string name="custom_script_info"><b>Enter your custom script below.</b>		\n<i>(Leave it blank to remove)</i>		\nFor information about custom scripts, click <a href="https://github.com/ukanth/afwall/wiki/CustomScripts">here</a>.</string>
    <string name="custom_script2_info">    	\n<b>Custom shutdown script</b>    	\nYou can also define a custom script to be executed when the firewall is <b>disabled</b>:</string>
    <string name="unsaved_changes">Unsaved changes</string>
    <string name="unsaved_changes_message">You have unsaved changes.\nDo you want to apply or discard them?</string>
    <string name="help_dialog_text"></string>
    <string name="showrules_title">IPtables Rules</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied</string>
    <string name="Search">Search</string>
    <string name="flushRulesConfirm">This will flush all the IPtables rules ! Do you want to continue ?</string>
    <string name="overrideRules">This will override the existing rules ! Do you want to import the rules ?</string>
    <string name="notification_new">New application installed.</string>
    <string name="notification_new_package">Configure internet permission</string>
    <string name="confirmMsg">This will disable the firewall! Do you want to continue?</string>
    <string name="apply">Apply</string>
    <string name="discard">Discard</string>
    <string name="delete">Delete</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="notification_title">Open AFWall+</string>
    <string name="error_notification_title">AFWall+ error</string>
    <string name="error_notification_text">Error applying firewall rules. Click here to open settings.</string>
    <string name="error_notification_ticker">AFWall+ could not apply rules</string>
    <string name="success_initd">Successfully installed startup script</string>
    <string name="unable_initd">Unable to install AFWall+ startup script. Please verify that your ROM/Kernel supports init.d</string>
    <string name="remove_initd">Successfully removed startup script</string>
    <string name="unable_remove_initd">Unable to remove AFWall+ startup script</string>
    <string name="widget_disable_fail">Cannot disable firewall - password defined!</string>
    <string name="widget_label_status">AFWall+ Toggle/Status</string>
    <string name="widget_label_settings">AFWall+ Settings</string>
    <string name="widget_label_settings_old">AFWall+ Settings(Old)</string>
    <string name="color_pick">Press on Color to apply</string>
    <string name="import_rules_droidwall">Import Droidwall Rules</string>
    <string name="export_rules">Export the rules only</string>
    <string name="export_all">Export preferences, rules and profile settings</string>
    <string name="import_rules">Import the rules only</string>
    <string name="import_all">Import preferences, rules and profile settings</string>
    <string name="export_rules_success">Exported successfully to </string>
    <string name="export_rules_fail">Export Rules failed!</string>
    <string name="import_rules_success">Imported successfully from </string>
    <string name="import_rules_fail">Import Rules failed!</string>
     <string name="import_rules_missing">Rules file is missing!</string>
    <string name="exportConfirm">Do you want to export rules to SD Card ?</string>
    <string name="export_logs_fail">Export To SD failed!</string>
    <string name="export_to_sd">Export to SD Card</string>
    <string name="enable_firewall_log">Enable Firewall Logs</string>
    <string name="enable_firewall_log_service">Turn on log service</string>
    <string name="showlog_title">Firewall Logs</string>
    <string name="showlog_service_summary">Enable this will show messages when connections gets blocked </string>
    <string name="enable_log">Enable Log</string>
    <string name="disable_log">Disable Log</string>
    <string name="log_disabled">Log Disabled</string>
    <string name="log_was_enabled">Log has been enabled</string>
    <string name="log_was_disabled">Log has been disabled</string>
    <string name="custom_title1">Custom name for Default Profile</string>
    <string name="custom_title2">Custom name for Profile1</string>
    <string name="custom_title3">Custom name for Profile2</string>
    <string name="custom_title4">Custom name for Profile3</string>
    <string name="multipleProfiles">Multiple Profiles</string>
    <string name="defaultProfile">Default</string>
    <string name="profile1">Profile1</string>
    <string name="profile2">Profile2</string>
    <string name="profile3">Profile3</string>
    <string name="lan_title">LAN Control</string>
    <string name="lan_summary">Enable this to control LAN permissions separately from WiFi permissions</string>
    <string name="iptables_pref">IPtables Binary</string>
    <string name="vpn_profile">VPN Control</string>
    <string name="vpnSummary">Enable this to add additional feature to control internet with VPN</string>
    <string name="roaming">Roaming Control</string>
    <string name="roamingSummary">Enable this to add additional feature to control internet while roaming</string>
    <string name="busybox_pref">Busybox Binary</string>
    <string name="disable_toaster">Disable Tasker Toasts</string>
    <string name="disableTasterSummary">This will disable toast messages for Tasker\'s plugin</string>
    <string name="ipv6_title">IPv6 Support</string>
    <string name="ipv6_summary">Enable support for IPv6</string>
    <string name="sec_prefs_title">Security Preferences</string>
    <string name="usePattern">Use lock pattern instead of password</string>
    <string name="stealthMode">Stealth mode on pattern</string>
    <string name="patternMaxTry">Maximum number of tries</string>
    <string name="enable_device_admin">Device Admin</string>
    <string name="device_admin_enabled">AFWall+ Device Admin Enabled</string>
    <string name="fixleakTitle">Fix Startup Data Leak</string>
    <string name="fixleakSummary">Prevent data leaks during system startup.  Your ROM must have init.d support.  HTC devices must be configured for S-OFF.</string>
    <string name="enableInboundTitle">Enable inbound connections</string>
    <string name="enableInboundSummary">Allow connections from the LAN to the phone (Samba, sshd, AirDroid, etc.)</string>
    <string name="hideicons_pref_title">Hide application\'s icons</string>
    <string name="hideicons_pref_summary_on">This will improve the performance by disabling application icons on the main view</string>
    <string name="hideicons_pref_summary_off">Application\'s icons will be shown on the main view</string>
    <string name="notify_pref_title">Enable Notifications</string>
    <string name="syscolor_pref_title">System application\'s color</string>
    <string name="syscolor_pref_summary_on">Selected color will be shown for system applications</string>
    <string name="enableConfirmTitle">Confirm box on AFWall+ disable</string>
    <string name="enableConfirm_summary_on">Firewall will ask for confirmation before being disabled</string>
    <string name="showUid">Show UID for apps</string>
    <string name="showuid_summary_on">Application\'s UID will be shown in the main view.</string>
    <string name="showuid_summary_off">Application\'s UID is hidden. Enabling can be useful to track logs</string>
    <string name="languages">Languages</string>
    <string name="check_all">Check All</string>
    <string name="invert_all">Invert All</string>
    <string name="uncheck_all">Uncheck All</string>
    <string name="dns_proxy_title">DNS Proxy </string>
    <string name="dns_proxy_summary">DNS lookups via netd on JB 4.3+. Disable this will block the internet on Android 4.3+</string>
</resources>