<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/abc_ic_search"
        app:showAsAction="always|collapseActionView"/>
    <item
        android:id="@+id/menu_list_item"
        android:icon="@drawable/abc_ic_menu_moreoverflow_normal_holo_dark"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_toggle"
                android:icon="@drawable/widget_off"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/menu_apply"
                android:icon="@drawable/apply"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/menu_log"
                android:icon="@drawable/logs"
                android:title="@string/show_log"
                app:showAsAction="always"/>
            <item
                android:id="@+id/menu_rules"
                android:icon="@drawable/rules"
                android:title="@string/showrules"
                app:showAsAction="always"/>
            <item
                android:id="@+id/menu_setpwd"
                android:icon="@drawable/lock"
                android:title="@string/setpwd"
                app:showAsAction="always"/>
            <item
                android:id="@+id/menu_setcustom"
                android:icon="@drawable/script"
                android:title="@string/set_custom_script"
                app:showAsAction="always"/>
            <item
                android:id="@+id/menu_preference"
                android:icon="@drawable/preferences"
                android:showAsAction="always"
                android:title="@string/preferences"/>
            <item
                android:id="@+id/menu_reload"
                android:icon="@drawable/reload"
                android:title="@string/reload"
                app:showAsAction="always"/>
            <item
                android:id="@+id/menu_export"
                android:icon="@drawable/exportr"
                android:title="@string/export_rules"
                app:showAsAction="always"/>
            <item
                android:id="@+id/menu_import"
                android:icon="@drawable/importr"
                android:title="@string/import_rules"
                app:showAsAction="always"/>
            <item
                android:id="@+id/menu_import_dw"
                android:icon="@drawable/importr"
                android:title="@string/import_rules_droidwall"
                app:showAsAction="always"/>
            <item
                android:id="@+id/menu_help"
                android:icon="@drawable/help"
                android:title="@string/help"
                app:showAsAction="always"/>
            <item
                android:id="@+id/menu_exit"
                android:icon="@drawable/exit"
                android:title="@string/exit"
                app:showAsAction="always"/>
        </menu>
    </item>

</menu>