<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    	<EditTextPreference
                android:summary="Custom name for Default Profile"
                android:title="@string/defaultProfile"
                android:key="default" />
    	<EditTextPreference
                android:summary="Custom name for profile1"
                android:title="@string/profile1"
                android:key="profile1" />
    	<EditTextPreference
                android:summary="Custom name for profile2"
                android:title="@string/profile2"
                android:key="profile2" />
    	<EditTextPreference
                android:summary="Custom name for profile3"
                android:title="@string/profile3"
                android:key="profile3" />
    </PreferenceScreen>
