<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:key="fixLeak"
        android:summary="@string/fixleakSummary"
        android:title="@string/fixleakTitle" />
    <!--
             <CheckBoxPreference
            android:key="mobiledataLimit"
            android:title="@string/fixmobileLimit"
            android:summary="@string/fixmobileLimitSummary" />
    -->
    <!--
              <CheckBoxPreference
            android:key="alternateStart"
            android:title="@string/alternateStartTitle"
            android:summary="@string/alternateStartSummary" />
    -->
    <CheckBoxPreference
        android:key="enableInbound"
        android:summary="@string/enableInboundSummary"
        android:title="@string/enableInboundTitle" />

</PreferenceScreen>