<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

     <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        <TextView
            android:id="@+id/check_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dip"
            android:paddingTop="20dip"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/checkAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_all" />

            <Button
                android:id="@+id/invertAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invert_all" />

            <Button
                android:id="@+id/uncheckAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uncheck_all" />
        </LinearLayout>
        
     </LinearLayout>
  </LinearLayout>
